<resources>
    <string name="app_name">Sampling</string>

    <string name="head_line">Indoor Data Collect Application</string>

    <string name="second_line">WiFi/BLE scan frequency is 2Hz,IMU scan frequency is 50Hz</string>

    <string name="STATIC_SCAN">Static Scan</string>

    <string name="DYNAMIC_SCAN">Dynamic Scan</string>

    <string name="dur">Duration:</string>

    <string name="min">min</string>

    <string name="dev">Device:</string>

    <string name="head">Head:</string>

    <string name="x">X:</string>

    <string name="y">Y:</string>

    <string name="z">Z:</string>

    <string name="m">m</string>
</resources>
