<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginBottom="10dp"
    android:background="@color/bg_2"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/DYNAMIC_SCAN"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/dev"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhilte"
            android:id="@+id/dev_dyn"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:id="@+id/head_dyn"
            android:layout_weight="4"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhilte"
            android:id="@+id/inputX_dyn"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textSize="15sp"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/y"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorWhilte"
            android:id="@+id/inputY_dyn"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textSize="15sp"
            android:textColor="@color/colorWhilte"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/z"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_weight="1"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:id="@+id/inputZ_dyn"
            android:layout_weight="4"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/m"
            android:textSize="15sp"
            android:textColor="@color/black"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorWhilte"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/btn_start_dyn"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:src="@drawable/btn_start"
            android:scaleType="fitCenter"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:src="@drawable/bt_trans"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:id="@+id/setting_dyn" />
    </LinearLayout>



    <Chronometer
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clock_dyn"
        android:textSize="30sp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"/>

</LinearLayout>
